# pink-transcriber-cuda

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/pink_transcriber/: __init__.py  config.py
src/pink_transcriber/cli/: client.py  server.py
src/pink_transcriber/core/: model.py
